# intuit

./: .clinerules  .env.template  .envrc  .gitignore  README.md  devenv.nix  pyproject.toml  pytest.ini  requirements.txt  test_memory.py
.chroma/: chroma.sqlite3
docs/: REFACTORING_SUMMARY.md  audio_pipeline_review.md  calendar_tool.md  dictation_mode.md  hackernews_browser_feature.md  hackernews_tool_fix.md  hardware_acceleration_review.md  local_models_migration.md  logging_and_debug.md  notes_tool.md  performance_logging.md  prompt.md  reminders_tool.md  tools_testing.md  voice_tui.md  voice_tui_layout.md
examples/: README.md  mcp_example.py  memory_progress_demo.py  memory_spinner_demo.py  thinking_progress_demo.py  thinking_spinner_demo.py  voice_tui_demo.py
memory-bank/: activeContext.md  decisionLog.md  implementationPlan-guiHockeyPuck.md  implementationPlan-guiVoiceIntegration.md  implementationPlan-hardwareAcceleration-checklist.md  implementationPlan-hardwareAcceleration-part2.md  implementationPlan-hardwareAcceleration.md  implementationPlan-langmem.md  implementationPlan-mcpIntegration.md  implementationPlan-productivityTools.md  mcpServerDesign-langmem.md  mcpServerDesign.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: README.md  fix_numpy_version.sh  hackernews_cli.py  inspect_langmem.py  restart_and_test.sh  restart_mcp_server.sh  setup.py  setup_devenv.sh  test_all_tools.py  test_audio_pipeline.py  test_hackernews.py  test_hackernews_browser.py  test_tools.sh
src/intuit/: agent.py  agent_factory.py  cli.py  dictation.py  disable_logging.py  logging_config.py  main.py  main_original.py  mcp_server.py  reminders_service.py  voice.py
src/intuit/audio/: __init__.py  stt_base.py  stt_factory.py  stt_google.py  stt_whisper.py  tts_base.py  tts_coqui.py  tts_factory.py  tts_gtts.py
src/intuit/cli/: __init__.py  cli_calendar.py  cli_mcp.py  cli_memory.py  cli_notes.py  cli_reminders.py  shared.py
src/intuit/config/: __init__.py  audio_config.py
src/intuit/hardware/: __init__.py  detector.py
src/intuit/llm/: __init__.py  llm_base.py  llm_factory.py  llm_ollama.py  llm_openai.py
src/intuit/memory/: __init__.py  chroma_store.py  manager.py  store.py  tools.py
src/intuit/tools/: base.py  basetool.py  calendar.py  filesystem.py  gmail.py  hackernews.py  notes.py  reminders.py  weather.py  web_search.py
src/intuit/ui/: cli.py  voice.py  voice_tui.py
src/intuit/ui/gui/: __init__.py  agent_gui.py  demo.py  integration.py  light_effects.py  main_gui.py  puck_widget.py  run_gui.py  standalone_gui.py  test_gui.py  voice_process.py
src/intuit/utils/: __init__.py  progress.py  spinner.py  voice_process.py
src/intuit/vector_store/: document.py  indexer.py
test_index/: javascript.txt  ml.txt  python.txt
tests/: conftest.py  test_dictation.py  test_mcp_client.py  test_mcp_server.py  test_mcp_simplified.py
tests/audio/: test_tts.py
tests/config/: test_audio_config.py
tests/hardware/: __init__.py  test_detector.py
tests/llm/: __init__.py  test_llm_factory.py  test_llm_providers.py
tests/memory/: __init__.py  mock_tools.py  test_manager.py  test_store.py  test_tools.py
tests/tools/: test_calendar.py  test_filesystem.py  test_gmail.py  test_notes.py  test_reminders.py  test_weather.py  test_web_search.py
tests/ui/: test_cli.py  test_voice.py  test_voice_tui.py
tests/vector_store/: test_indexer.py
