[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intuit"
version = "1.0.0"
description = "Intuit AI Agents Python package."
authors = [
    { name = "John Rizzo", email = "johnrizzo1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Add your runtime dependencies here, e.g. "requests>=2.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]
