[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intuit"
version = "1.0.0"
description = "Intuit AI Agents Python package."
authors = [
    { name = "John Rizzo", email = "johnrizzo1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv",
    "aiohttp",
    "beautifulsoup4",
    "chromadb",
    "google-api-python-client",
    "google-auth-oauthlib",
    "gtts",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "numpy",
    "openai",
    "openai-whisper",
    "pillow",
    "prompt-toolkit",
    "pydantic",
    "pypdf2",
    "pyperclip",
    "pyside6",
    "pyautogui",
    "requests",
    "rich",
    "soundfile",
    "speechrecognition",
    "textual",
    "yaspin",
    "fastmcp>=2.3.0",
    "langmem>=0.0.29",
    "mcp-client>=0.0.0",
    "mcp>=1.8.0",
]

[project.scripts]
intuit = "intuit.main:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["intuit*"]
exclude = ["tests*", "docs*", "bak*"]
